--- a/MSI_advising.html
+++ b/MSI_advising.html
@@ -40,33 +40,33 @@
             <p>This section aims to provide you with additional information regarding your specific degree requirements.
             </p>
 
-            <section id="degree-requirement">
+            <div id="degree-requirement">
 
-                <section>
+                <div>
                     <img src="images/msi_advising/big_data_analytics.png" width="150" alt="Big Data Analytics">
                     <button>Degree Requirements</button>
                     <button>Course Planning Sheet</button>
-                </section>
+                </div>
 
-                <section>
+                <div>
                     <img src="images/msi_advising/ux_research_design.png" width="150" alt="UX Research & Design">
                     <button>Degree Requirements</button>
                     <button>Course Planning Sheet</button>
-                </section>
+                </div>
 
-                <section>
+                <div>
                     <img src="images/msi_advising/lakes.png" width="150" alt="Libraries, Archives, and Knowledge Environments in Society (LAKES)">
                     <button>Degree Requirements</button>
                     <button>Course Planning Sheet</button>
-                </section>
+                </div>
 
-                <section>
+                <div>
                     <img src="images/msi_advising/user_centered_agile.png" width="150" alt="User-Centered Agile Development">
                     <button>Degree Requirements</button>
                     <button>Course Planning Sheet</button>
-                </section>
+                </div>
 
-            </section>
+            </div>
 
             <h3>How to Use Course Planning Worksheets</h3>
             <ol>
@@ -106,11 +106,11 @@
                     <li>Connecting with student support resources and services</li>
                     <li>Navigating a disruption to your MSI experience</li>
                 </ul>
-                <section id="advisor-help-buttons-container">
+                <div id="advisor-help-buttons-container">
                     <button>Schedule 1:1 Appointment</button>
                     <button>Drop In 1:1 Appointment</button>
                     <button>Email Us</button>
-                </section>
+                </div>
             </section>
         </section>
         
