--- a/tutoring.html
+++ b/tutoring.html
@@ -25,7 +25,7 @@
 
     <main id="main_content_start">
         <section class="heading-content">
-            <h1>UMSI STUDENT LIFE</h1>
+            <h1>UMSI TUTORING</h1>
         </section>
         
         <section class="body-content">
